...

            <ScrollView
                android:id="@+id/scrollViewAddQuestion"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
...

                    <Button
                        android:id="@+id/choice_course_button"
                        android:layout_width="0dp"
                        android:layout_height="57dp"
...

                    <EditText
                        android:id="@+id/questionTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
...
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:checkedButton="@+id/image_radio_button"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.505"
...

                        <RadioButton
                            android:id="@+id/text_radio_button"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
...

                    <Button
                        android:id="@+id/selectImageButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
...

                    <EditText
                        android:id="@+id/questionText"
                        android:layout_width="wrap_content"
                        android:layout_height="47dp"
...

                    <ImageView
                        android:id="@+id/addQuestion_display_image"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
...
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:checkedButton="@id/mcq_radio"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
...

                        <RadioButton
                            android:id="@+id/true_false_radio"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
...
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:checkedButton="@id/radio_answer1"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
...

                        <RadioButton
                            android:id="@+id/radio_answer2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
...

                        <RadioButton
                            android:id="@+id/radio_answer3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
...

                        <RadioButton
                            android:id="@+id/radio_answer4"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
...

                    <Button
                        android:id="@+id/addOrEditQuestionButton"
                        android:layout_width="166dp"
                        android:layout_height="wrap_content"
...
