...
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/button_quests_shape"
                    android:button="@android:color/transparent"
                    android:checked="false"
                    android:tag="1"
                    android:text="@string/truth_value"
                    android:textAlignment="center" />

                <RadioButton
                    android:id="@+id/answer2"
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/button_quests_shape"
                    android:button="@android:color/transparent"
                    android:tag="2"
                    android:text="@string/false_value"
                    android:textAlignment="center" />
            </RadioGroup>

            <RadioGroup
                android:id="@+id/answer_radio_group_bot"
                android:layout_width="300dp"
...
